argocd/base/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardmembers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boardmembers
  template:
    metadata:
      labels:
        app: boardmembers
    spec:
      containers:
        - name: boardmembers
          image: registry.uniproject.jp/infra/boardmembers:1.0.0
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 30
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 30
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 500m # 必要最低限の0.5CPUを確保
              memory: 1Gi # 必要最低限の1GiBを確保
            limits:
              cpu: 1000m # 最大1CPUまで使用可能
              memory: 2Gi # 最大2GiBまで使用可能
      imagePullSecrets:
        - name: internal-harbor
