argocd/base/app-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boardmembers-route
spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
  hostnames:
    - "boardmembers.uniproject.jp"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: boardmembers-service
          port: 80
      # sticky.cookie
      sessionPersistence:
        sessionName: cookie
        type: Cookie
