argocd/base/app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: boardmembers
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`boardmembers.uniproject.jp`) && PathPrefix(`/`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      priority: 10
      services:
        - kind: Service
          name: boardmembers-service
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
          strategy: wrr
          weight: 10
  tls:
    certResolver: cf-prod
    domains:
      - main: boardmembers.uniproject.jp
